# poor-man-bus-pirate

./: README.md  TODO.md
.github/workflows/: build-firmware.yml
circuit/: .gitignore  poor-man-bus-pirate.kicad_prl  poor-man-bus-pirate.kicad_pro  poor-man-bus-pirate.kicad_sch
firmware/: CMakeLists.txt  buspirate.cc  buspirate.hh  command.c  command.h  main.c  main.cc  parser.cc  parser.hh  tokens.h  tokens.hh  words.hh
firmware/protocols/: protocol.hh  uart.cc  uart.hh
firmware/src/: command.c  command.h  config.h  i2c_master.c  i2c_master.h  main.c  output.c  output.h  pins.c  pins.h  pwm.c  pwm.h  spi.c  spi.h  spi_master.c  spi_master.h  spi_slave.c  spi_slave.h  uart.c  uart.h  variables.c  variables.h
firmware/src/util/: getline.h
firmware/util/: getline.c  getline.cc  getline.hh
tools/: upload-server.py
